fix checkbox label overflow

--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,7 @@ body {
 .form__checkbox-item {
   display: flex;
   align-items: center;
-  gap: 0.8rem;
+  gap: 0.4rem;
 }
 
 .form__checkbox {
